cambio de colores bot

--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
         </form>
     </section>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-    <df-messenger
+   <df-messenger
         intent="WELCOME"
-        chat-title="Kevbot"
-        agent-id="879f6aef-7096-45f2-981c-6385ac18b602"
+        chat-title="Asistente Kevin"
+        agent-id="TU_AGENT_ID"
         language-code="es"
-    ></df-messenger>
+        chat-icon="https://cdn-icons-png.flaticon.com/512/4712/4712027.png"
+        background-color="#00bcd4"
+        text-color="#ffffff">
+</df-messenger>
+
 </body>
 </html>
