cambio de colores bot

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     </section>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
    <df-messenger
-        intent="WELCOME"
+        intent="Saludo"
         chat-title="Asistente Kevin"
-        agent-id="TU_AGENT_ID"
+        agent-id="Kevbot"
         language-code="es"
         chat-icon="https://cdn-icons-png.flaticon.com/512/4712/4712027.png"
         background-color="#00bcd4"
