cambio de colores bot

--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
         agent-id="Kevbot"
         language-code="es"
         chat-icon="https://cdn-icons-png.flaticon.com/512/4712/4712027.png"
-        background-color="#00bcd4"
-        text-color="#ffffff">
-    </df-messenger>
+    ><</df-messenger>
 
 </body>
 </html>
