cambio de colores bot

--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
         </form>
     </section>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-   <df-messenger
+    <df-messenger
         intent="Saludo"
-        chat-title="Asistente Kevin"
-        agent-id="Kevbot"
+        chat-title="Kevbot"
+        agent-id="879f6aef-7096-45f2-981c-6385ac18b602"
         language-code="es"
         chat-icon="https://cdn-icons-png.flaticon.com/512/4712/4712027.png"
-    ><</df-messenger>
-
+        background-color="#00bcd4"
+        text-color="#ffffff">
+    ></df-messenger>
 </body>
 </html>
