cambio de colores bot

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </section>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     <df-messenger
-        intent="Saludo"
+        intent="WELCOME"
         chat-title="Kevbot"
         agent-id="879f6aef-7096-45f2-981c-6385ac18b602"
         language-code="es"
