--- a/index.html
+++ b/index.html
@@ -18,22 +18,15 @@
         <a href="#contacto">Contacto</a>
     </nav>
     <section id="proyectos">
-        <h2>Proyectos</h2>
-        <div class="proyectos">
-            <div class="proyecto">
-                <h3>Proyecto 1</h3>
-                <p>Descripción breve del proyecto 1.</p>
-            </div>
-            <div class="proyecto">
-                <h3>Proyecto 2</h3>
-                <p>Descripción breve del proyecto 2.</p>
-            </div>
-            <div class="proyecto">
-                <h3>Proyecto 3</h3>
-                <p>Descripción breve del proyecto 3.</p>
-            </div>
-        </div>
+        <h2>🚀 Proyectos</h2>
+        <p>
+            Actualmente estoy comenzando mi camino como desarrollador independiente. Aunque aún no tengo proyectos publicados, me encuentro aprendiendo y construyendo herramientas reales como este sitio web y un chatbot personalizado para atención al cliente.
+        </p>
+        <p>
+            Próximamente iré compartiendo aquí los avances, ejemplos de mis trabajos y soluciones creadas con tecnologías como Dialogflow, Netlify, GitHub, y más.
+        </p>
     </section>
+
     <section id="servicios">
         <h2>Servicios</h2>
         <div class="servicios">
@@ -51,6 +44,16 @@
             </div>
         </div>
     </section>
+    <section id="sobre-mi">
+        <h2>🧑‍💻 Sobre mí</h2>
+        <p>
+           Z Soy Kevin Martínez, una persona curiosa, trabajadora y optimista, con sólidas habilidades interpersonales. Me apasiona la tecnología, estoy en constante búsqueda de conocimiento y disfruto crear soluciones digitales que ayuden a las personas y negocios a crecer.
+        </p>
+        <p>
+            Actualmente estoy dando mis primeros pasos como desarrollador, enfocado en la creación de chatbots inteligentes, automatización y diseño web. Este sitio es parte de mi aprendizaje y un reflejo de lo que puedo construir. ¡Gracias por estar aquí!
+        </p>
+    </section>Z
+
     <section id="contacto">
         <h2>Contacto</h2>
         <form class="contacto-form">
