--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="sobre-mi">
         <h2>🧑‍💻 Sobre mí</h2>
         <p>
-           Z Soy Kevin Martínez, una persona curiosa, trabajadora y optimista, con sólidas habilidades interpersonales. Me apasiona la tecnología, estoy en constante búsqueda de conocimiento y disfruto crear soluciones digitales que ayuden a las personas y negocios a crecer.
+           Soy Kevin Martínez, una persona curiosa, trabajadora y optimista, con sólidas habilidades interpersonales. Me apasiona la tecnología, estoy en constante búsqueda de conocimiento y disfruto crear soluciones digitales que ayuden a las personas y negocios a crecer.
         </p>
         <p>
             Actualmente estoy dando mis primeros pasos como desarrollador, enfocado en la creación de chatbots inteligentes, automatización y diseño web. Este sitio es parte de mi aprendizaje y un reflejo de lo que puedo construir. ¡Gracias por estar aquí!
