Nuevos colores y formato

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>
             Actualmente estoy dando mis primeros pasos como desarrollador, enfocado en la creación de chatbots inteligentes, automatización y diseño web. Este sitio es parte de mi aprendizaje y un reflejo de lo que puedo construir. ¡Gracias por estar aquí!
         </p>
-    </section>Z
+    </section>
 
     <section id="contacto">
         <h2>Contacto</h2>
