Nuevos colores y formato

--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
             Actualmente estoy dando mis primeros pasos como desarrollador, enfocado en la creación de chatbots inteligentes, automatización y diseño web. Este sitio es parte de mi aprendizaje y un reflejo de lo que puedo construir. ¡Gracias por estar aquí!
         </p>
     </section>
+    <section id="redes">
+        <h2>🔗 Redes y Perfil Profesional</h2>
+        <p>Soy estudiante de Ingeniería en Informática en INACAP, sede Puerto Montt. Me encuentro en constante aprendizaje y evolución como desarrollador web y creador de chatbots.</p>
+
+        <div class="redes-contenedor">
+            <a href="mailto:kmartinezdev.tech@gmail.com" class="boton-red">📧 Correo</a>
+            <a href="https://wa.me/+56940352501" target="_blank" class="boton-red">💬 WhatsApp</a>
+            <a href="https://github.com/Nazgrel15" target="_blank" class="boton-red">🐙 GitHub</a>
+        </div>
+    </section>
+
 
     <section id="contacto">
         <h2>Contacto</h2>
