--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
             <a href="https://github.com/Nazgrel15" target="_blank" class="boton-red">🐙 GitHub</a>
         </div>
     </section>
+    <section id="blog">
+        <h2>🧪 Blog & Experimentos</h2>
+        <p>Aquí comparto ideas, pruebas, códigos y aprendizajes que voy desarrollando como estudiante y futuro profesional. ¡Este espacio crece junto conmigo!</p>
+
+        <div class="blog-grid">
+        <div class="entrada-blog">
+            <h3>Probando mi primer chatbot</h3>
+            <span class="fecha">Junio 2025</span>
+            <p>Mi experiencia inicial creando un bot con Dialogflow, integrándolo a mi página y dándole una personalidad útil.</p>
+        </div>
+        <div class="entrada-blog">
+            <h3>Diseño de mi portafolio</h3>
+            <span class="fecha">Junio 2025</span>
+            <p>Cómo personalicé mi sitio web con Netlify, CSS moderno y elementos responsivos.</p>
+        </div>
+        <!-- Puedes duplicar más entradas aquí -->
+        </div>
+    </section>
 
 
     <section id="contacto">
