--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
     <section id="redes">
         <h2>🔗 Redes y Perfil Profesional</h2>
-        <p>Soy estudiante de Ingeniería en Informática en INACAP, sede Puerto Montt. Me encuentro en constante aprendizaje y evolución como desarrollador web y creador de chatbots.</p>
+        <p>Soy estudiante de Ingeniería en Informática en INACAP. Me encuentro en constante aprendizaje y evolución como desarrollador web y creador de chatbots.</p>
 
         <div class="redes-contenedor">
             <a href="mailto:kmartinezdev.tech@gmail.com" class="boton-red">📧 Correo</a>
@@ -78,7 +78,16 @@
             <span class="fecha">Junio 2025</span>
             <p>Cómo personalicé mi sitio web con Netlify, CSS moderno y elementos responsivos.</p>
         </div>
-        <!-- Puedes duplicar más entradas aquí -->
+        <div class="entrada-blog">
+            <h3>Caso de Estudio: Chatbot para Café Puerto Dulce</h3>
+            <span class="fecha">Julio 2025</span>
+            <p>
+                Desarrollé un asistente virtual con Dialogflow para una cafetería ficticia de Puerto Montt. El bot responde preguntas comunes como menú, horarios, reservas y ubicación.
+                <br>
+                <a href="cafe-puerto-dulce.html" class="leer-mas">Leer más...</a>
+            </p>
+        </div>
+
         </div>
     </section>
 
