--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         <a href="#servicios">Servicios</a>
         <a href="#contacto">Contacto</a>
     </nav>
-    <section id="proyectos">
-        <h2>🚀 Proyectos</h2>
+
+    <section id="sobre-mi">
+        <h2>🧑‍💻 Sobre mí</h2>
         <p>
-            Actualmente estoy comenzando mi camino como desarrollador independiente. Aunque aún no tengo proyectos publicados, me encuentro aprendiendo y construyendo herramientas reales como este sitio web y un chatbot personalizado para atención al cliente.
+           Soy Kevin Martínez, una persona curiosa, trabajadora y optimista, con sólidas habilidades interpersonales. Me apasiona la tecnología, estoy en constante búsqueda de conocimiento y disfruto crear soluciones digitales que ayuden a las personas y negocios a crecer.
         </p>
         <p>
-            Próximamente iré compartiendo aquí los avances, ejemplos de mis trabajos y soluciones creadas con tecnologías como Dialogflow, Netlify, GitHub, y más.
+            Actualmente estoy dando mis primeros pasos como desarrollador, enfocado en la creación de chatbots inteligentes, automatización y diseño web. Este sitio es parte de mi aprendizaje y un reflejo de lo que puedo construir. ¡Gracias por estar aquí!
         </p>
     </section>
 
@@ -44,15 +45,17 @@
             </div>
         </div>
     </section>
-    <section id="sobre-mi">
-        <h2>🧑‍💻 Sobre mí</h2>
+
+    <section id="proyectos">
+        <h2>🚀 Proyectos</h2>
         <p>
-           Soy Kevin Martínez, una persona curiosa, trabajadora y optimista, con sólidas habilidades interpersonales. Me apasiona la tecnología, estoy en constante búsqueda de conocimiento y disfruto crear soluciones digitales que ayuden a las personas y negocios a crecer.
+            Actualmente estoy comenzando mi camino como desarrollador independiente. Aunque aún no tengo proyectos publicados, me encuentro aprendiendo y construyendo herramientas reales como este sitio web y un chatbot personalizado para atención al cliente.
         </p>
         <p>
-            Actualmente estoy dando mis primeros pasos como desarrollador, enfocado en la creación de chatbots inteligentes, automatización y diseño web. Este sitio es parte de mi aprendizaje y un reflejo de lo que puedo construir. ¡Gracias por estar aquí!
+            Próximamente iré compartiendo aquí los avances, ejemplos de mis trabajos y soluciones creadas con tecnologías como Dialogflow, Netlify, GitHub, y más.
         </p>
     </section>
+    
     <section id="redes">
         <h2>🔗 Redes y Perfil Profesional</h2>
         <p>Soy estudiante de Ingeniería en Informática en INACAP. Me encuentro en constante aprendizaje y evolución como desarrollador web y creador de chatbots.</p>
@@ -77,10 +80,11 @@
             <h3>Diseño de mi portafolio</h3>
             <span class="fecha">Junio 2025</span>
             <p>Cómo personalicé mi sitio web con Netlify, CSS moderno y elementos responsivos.</p>
+            <a href="mi-portafolio.html" class="leer-mas">Leer más...</a>
         </div>
         <div class="entrada-blog">
             <h3>Caso de Estudio: Chatbot para Café Puerto Dulce</h3>
-            <span class="fecha">Julio 2025</span>
+            <span class="fecha">Junio 2025</span>
             <p>
                 Desarrollé un asistente virtual con Dialogflow para una cafetería ficticia de Puerto Montt. El bot responde preguntas comunes como menú, horarios, reservas y ubicación.
                 <br>
