--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
    
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a Mi Portafolio</h1>
-        <p>Descubre mis proyectos, servicios y cómo contactarme</p>
+    <header class="cabecera">
+        <div class="contenido-cabecera">
+            <div class="texto-cabecera">
+                <h1>Bienvenido a Mi Portafolio</h1>
+                <p>Descubre mis proyectos, servicios y cómo contactarme</p>
+            </div>
+            <div class="imagen-cabecera">
+                <img src="images/portada-kevin.png" alt="Ilustración profesional Kevin" />
+            </div>
+        </div>
     </header>
+
     <nav>
         <a href="#proyectos">Proyectos</a>
         <a href="#servicios">Servicios</a>
