--- a/index.html
+++ b/index.html
@@ -8,16 +8,8 @@
    
 </head>
 <body>
-    <header class="cabecera">
-        <div class="contenido-cabecera">
-            <div class="texto-cabecera">
-                <h1>Bienvenido a Mi Portafolio</h1>
-                <p>Descubre mis proyectos, servicios y cómo contactarme</p>
-            </div>
-            <div class="imagen-cabecera">
-                <img src="images/portada-kevin.png" alt="Ilustración profesional Kevin" />
-            </div>
-        </div>
+    <header class="portada-sola">
+        <img src="images/portada-kevin.png" alt="Portada ilustrada Kevin" />
     </header>
 
     <nav>
