--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <h3>Probando mi primer chatbot</h3>
             <span class="fecha">Junio 2025</span>
             <p>Mi experiencia inicial creando un bot con Dialogflow, integrándolo a mi página y dándole una personalidad útil.</p>
+            <a href="mi-primer-chatbot.html" class="leer-mas">Leer más...</a>
         </div>
         <div class="entrada-blog">
             <h3>Diseño de mi portafolio</h3>
