--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
                 <a href="cafe-puerto-dulce.html" class="leer-mas">Leer más...</a>
             </p>
         </div>
+        <div class="entrada-blog">
+            <h3>Mi primer flujo en n8n</h3>
+            <span class="fecha">Junio 2025</span>
+            <p>Primer paso en mi recorrido aprendiendo automatizaciones con n8n</p>
+            <a href="mi-primer-flujo-n8n.html" class="leer-mas">Leer más...</a>
+        </div>
 
         </div>
     </section>
